--- a/gradle.properties
+++ b/gradle.properties
@@ -17,20 +17,20 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-android.signingConfigs {
-    debug {
-        storeFile file("/tmp/keystore3")
-        storePassword "my pass"
-        keyAlias "my alias"
-        keyPassword "my alias pass"
-    }
-    release {
-        storeFile file("/tmp/keystore3")
-        storePassword "my pass"
-        keyAlias "my alias"
-        keyPassword "my alias pass"
-    }
-}
+# android.signingConfigs {
+#     debug {
+#         storeFile file("/tmp/keystore3")
+#         storePassword "my pass"
+#         keyAlias "my alias"
+#         keyPassword "my alias pass"
+#     }
+#     release {
+#         storeFile file("/tmp/keystore3")
+#         storePassword "my pass"
+#         keyAlias "my alias"
+#         keyPassword "my alias pass"
+#     }
+# }
 
 android.buildTypes.release.signingConfig=android.signingConfigs.release
 
